[project]
name = "generate-brand-ad-cover"
version = "0.1.2"
description = "生成品牌广告封面 - MCP服务器，支持多种风格的品牌广告封面生成"
readme = "README.md"
authors = [
    {name = "shidianxiaoerya", email = "934679045@qq.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "brand", "advertisement", "cover", "generator", "svg", "design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=1.12.4",
]

[project.urls]
Homepage = "https://github.com/shidianxiaoerya/generate-brand-ad-cover"
Repository = "https://github.com/shidianxiaoerya/generate-brand-ad-cover"
Issues = "https://github.com/shidianxiaoerya/generate-brand-ad-cover/issues"

[project.scripts]
generate-brand-ad-cover = "mcp_plus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_plus"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]